[gd_scene load_steps=2 format=3 uid="uid://jq2ubxqrg5dbh"]

[ext_resource type="Script" uid="uid://fuv23ni3w671i" path="res://algorithms/proceduralgeneration/mirroredcellularautomata/mirrored_cellular_automata.gd" id="1_n38jm"]

[node name="MirroredCellularAutomata" type="Node2D"]
script = ExtResource("1_n38jm")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 180.0
offset_bottom = 172.0

[node name="Label" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Mirrored Cellular Automata"

[node name="RandomButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Randomize"

[node name="StepButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Step Evolution"

[node name="ToggleEvolutionButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Stop Evolution"

[node name="SaveButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Save Pattern"

[node name="SymmetryOptionsContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 200.0
offset_right = 220.0
offset_bottom = 361.0

[node name="Label" type="Label" parent="UI/SymmetryOptionsContainer"]
layout_mode = 2
text = "Symmetry Options"

[node name="SymmetryOption" type="OptionButton" parent="UI/SymmetryOptionsContainer"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Quad Mirror"
popup/item_0/id = 0
popup/item_1/text = "Eight-Way Mirror"
popup/item_1/id = 1
popup/item_2/text = "Rotational"
popup/item_2/id = 2

[node name="FillPercentLabel" type="Label" parent="UI/SymmetryOptionsContainer"]
layout_mode = 2
text = "Fill Percent: 30%"

[node name="FillPercentSlider" type="HSlider" parent="UI/SymmetryOptionsContainer"]
layout_mode = 2
min_value = 1.0
max_value = 50.0
value = 30.0

[node name="BirthProbLabel" type="Label" parent="UI/SymmetryOptionsContainer"]
layout_mode = 2
text = "Birth Probability: 20%"

[node name="BirthProbSlider" type="HSlider" parent="UI/SymmetryOptionsContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.2

[node name="DeathProbLabel" type="Label" parent="UI/SymmetryOptionsContainer"]
layout_mode = 2
text = "Death Probability: 10%"

[node name="DeathProbSlider" type="HSlider" parent="UI/SymmetryOptionsContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.1

[connection signal="pressed" from="UI/VBoxContainer/RandomButton" to="." method="_on_random_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/StepButton" to="." method="_on_step_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/ToggleEvolutionButton" to="." method="_on_toggle_evolution_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="item_selected" from="UI/SymmetryOptionsContainer/SymmetryOption" to="." method="_on_symmetry_option_item_selected"]
[connection signal="value_changed" from="UI/SymmetryOptionsContainer/FillPercentSlider" to="." method="_on_fill_percent_slider_value_changed"]
[connection signal="value_changed" from="UI/SymmetryOptionsContainer/BirthProbSlider" to="." method="_on_birth_prob_slider_value_changed"]
[connection signal="value_changed" from="UI/SymmetryOptionsContainer/DeathProbSlider" to="." method="_on_death_prob_slider_value_changed"]
